# bicycle_ros_packages

./: README.md
MPC_CUDA_test/: MPC_CUDA_test.sln  MPC_CUDA_test.vcxproj  README.md  a.out  kernel.cu  mpc_kernal.out
MPC_ros_node/: CMakeLists.txt  package.xml
MPC_ros_node/launch/: MPC_node.launch
MPC_ros_node/src/: kernel.cu  kernel_expand.cu  kernel_new.cu  kernel_obs.cu  kernel_obs0718.cu  main.cpp  main_expand.cpp  main_expand_map.cpp  main_obs.cpp  main_obs0718.cpp
balance_command_node/: CMakeLists.txt  package.xml
balance_command_node/launch/: balance_command_node.launch
balance_command_node/src/: main.cpp
bicycle_lmi_controller/: CMakeLists.txt  package.xml
bicycle_lmi_controller/launch/: lmi_controller.launch
bicycle_lmi_controller/src/: bicycle_lmi_controller.cpp
bicycle_pid_controller/: CMakeLists.txt  package.xml
bicycle_pid_controller/launch/: pid_controller.launch
bicycle_pid_controller/src/: bicycle_pid_controller.cpp
bicycle_ros/: CMakeLists.txt  README.md  package.xml
bicycle_ros/config/: controller2.yaml
bicycle_ros/launch/: bicycle.launch  controller.launch  display.launch  display.rviz  display_mmwave.rviz  display_obs.rviz  ekf_mpc.launch  exp_display.launch  gazebo.launch  map_bicycle.launch  obs_bicycle.launch  sim_pc.rviz  sim_pc_bicycle.launch  sim_pc_bicycle_nobs.launch  tracker.launch  urdf.rviz
bicycle_ros/map/: nthu_world.pgm  nthu_world.yaml  nthu_world_rounded.pgm  nthu_world_rounded.yaml
bicycle_ros/meshes/: back_wheel_1.stl  frame.stl  front_fork_1.stl  front_wheel_1.stl
bicycle_ros/urdf/: bicycle.gazebo  bicycle.trans  bicycle.xacro  gazebo.xacro  materials.xacro  obstacle.xacro  sensors.gazebo  sensors.xacro
bike_experiment_viz/: CMakeLists.txt  package.xml
multiple-object-tracking-lidar/: CMakeLists.txt
odometry_tf/: CMakeLists.txt  package.xml
px4_ekf/: CMakeLists.txt  package.xml
px4_viz/: CMakeLists.txt  package.xml
(+54 files in other folders)
